tests/ui/parser/doc-before-identifier.rs
fn /// document
foo() {}
//~^^ ERROR expected identifier, found doc comment `/// document`

fn main() {
    foo();
}
